# fyyur-project

./: .gitignore  README.md  app.py  config.py  forms.py  models.py  pyproject.toml  requirements.txt  wsgi.py
app/: app.py  config.py  forms.py  models.py  requirements.txt
app/migrations/versions/: 02965ff1dd8e_.py  0dd6f1a0a442_.py  277b97cb3ba9_.py  4f367edb167a_.py  54cd7e0ef12c_.py  6d52a9ce950a_.py  989889fdc80a_.py  b36059335c38_.py  ba7c0e684782_.py  d718f25c6297_.py  eeb3039010f3_.py
app/templates/forms/: edit_artist.html  edit_venue.html  new_artist.html  new_show.html  new_venue.html
app/templates/pages/: show_artist.html  show_venue.html
static/js/: script.js
templates/pages/: home.html  venues.html
