[project]
name = "fyyur"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.8.1",
    "babel==2.10.3",
    "fabric==2.7.1",
    "flask>=2.3.0",
    "flask-migrate==3.1.0",
    "flask-moment==1.0.4",
    "flask-sqlalchemy>=3.0.0",
    "flask-wtf>=1.1.0",
    "gitpython==3.1.27",
    "gunicorn==20.1.0",
    "psycopg2-binary==2.9.3",
    "python-dateutil==2.8.2",
    "sqlalchemy==1.4.39",
    "wtforms==3.0.1",
]
